syntax = "proto3";

package proposalpb;

option go_package = "../proposalpb";

// The ProposalHandle service definition.
service ProposalHandle {
  // Handles a received proposal message
  rpc ProposalReceive (Proposal) returns (ProposalResponse) {}
}

// The request message containing the user's name.
message Proposal {
  int64 type = 1;
  string round = 2;
  string sender = 3;
  repeated string tc = 4;
  string sig = 5;
}

message ProposalResponse {}